--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@rainbow-me/rainbowkit": "^0.10.0",
+    "@superfluid-finance/sdk-core": "^0.6.1",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "ethers": "^5.7.2",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-beforeunload": "^2.5.3",
+    "react-dom": "18.2.0",
+    "wagmi": "^0.10.15"
   }
 }
